--- a/pages/car.html
+++ b/pages/car.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/car.css">
 </head>
 <body>
-    <div class="juegoC">
+    <div class="juego">
         <div class="puntuacion"></div>
         <div class="puntuacionAlta"></div>
         <div class="start">
