--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/principal.css">
 </head>
 <body>
-    <div class="contenedor">
+  <div class="contenedor">
     <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
@@ -34,6 +34,7 @@
           <a href="./pages/car.html" class="btn btn-primary">Jugar</a>
         </div>
     </div>
-    </div>
+  </div>
+  <script src="./javascript/principal.js"></script>
 </body>
 </html>
