--- a/pages/tictactoe.html
+++ b/pages/tictactoe.html
@@ -9,9 +9,14 @@
 </head>
 <body>
     <div class="flex">
-        <div class="p1">Player 1: 0</div>
+        <div><h2 class="p1" id="j1">Jugador 1</h2></div>
         <div class="header">Tic tac toe</div>
-        <div class="p2">Player 2: 0</div>
+        <div><h2 class="p2" id="j2">Jugador 2</h2></div>
+    </div>
+    <div class="flex2">
+        <h2 class="p1 oculto" id="p1">Jugador 1 Gano</h2>
+        <h2 class="p2 oculto" id="p2">Jugador 2 Gano</h2>
+        <h2 class="oculto" id="empate">Empate</h2>
     </div>
     <div class="grid">
         <div class="espacio" id="uno"></div>
@@ -24,8 +29,8 @@
         <div class="espacio" id="ocho"></div>
         <div class="espacio" id="nueve"></div>
     </div>
-    <div class="cajaReset">
-        <button class="reset" type="reset">Reset</button>
+    <div class="cajaReset oculto" id="reset">
+        <button class="reset" type="reset"><a href="./tictactoe.html">Reset</a></button>
     </div>
     <script src="../javascript/tictactoe.js"></script>
 </body>
