--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         </div>
     </div>
   </div>
-  <script src="./javascript/principal.js"></script>
+  <!-- <script src="./javascript/principal.js"></script> -->
 </body>
 </html>
