--- a/pages/car.html
+++ b/pages/car.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="../css/car.css">
 </head>
 <body>
+    <div class="puntuacion"></div>
+    <div class="puntuacionAlta"></div> 
+    <button class="volver"><a href="../index.html">Volver</a></button>
+    <div class="pantalla">
+        <p class="ClickParaEmpezar">Presione click para empezar el juego</p>
+    </div>
     <div class="juego">
-        <div class="puntuacion"></div>
-        <div class="puntuacionAlta"></div>
-        <div class="start">
-            <p class="toStart">Presione click para empezar el juego</p>
-        </div>
+        <div class="out1"></div>
         <div class="areaJuego"></div>
+        <div class="out2"></div>
     </div>
     <script src="../javascript/car.js"></script>
 </body>
