--- a/pages/tictactoe.html
+++ b/pages/tictactoe.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="flex">
-        <div><h2 class="p1" id="j1">Jugador 1</h2></div>
+        <div><h2 class="p1">Jugador 1: </h2><h2 class="p1" id="j1"></h2></div>
         <div class="header">Tic tac toe</div>
-        <div><h2 class="p2" id="j2">Jugador 2</h2></div>
+        <div><h2 class="p2">Jugador 2: </h2><h2 class="p2" id="j2"></h2></div>
     </div>
     <div class="flex2">
         <h2 class="p1 oculto" id="p1">Jugador 1 Gano</h2>
@@ -30,7 +30,11 @@
         <div class="espacio" id="nueve"></div>
     </div>
     <div class="cajaReset oculto" id="reset">
-        <button class="reset" type="reset"><a href="./tictactoe.html">Reset</a></button>
+        <button class="reset" type="reset"><a href="./tictactoe.html">Reset juego</a></button>
+        <button class="reset" id="btn2"><a href="./tictactoe.html">Reset puntacion</a></button>
+    </div>
+    <div class="cajaReset">
+        <button class="reset"><a href="../index.html">Volver</a></button>
     </div>
     <script src="../javascript/tictactoe.js"></script>
 </body>
