--- a/pages/car.html
+++ b/pages/car.html
@@ -10,7 +10,7 @@
 <body>
     <div class="puntuacion"></div>
     <div class="puntuacionAlta"></div> 
-    <button class="volver"><a href="../index.html">Volver</a></button>
+    <button class="volver">Volver</button>
     <div class="pantalla">
         <p class="ClickParaEmpezar">Presione click para empezar el juego</p>
     </div>
