--- a/pages/tictactoe.html
+++ b/pages/tictactoe.html
@@ -13,11 +13,6 @@
         <div class="header">Tic tac toe</div>
         <div><h2 class="p2">Jugador 2: </h2><h2 class="p2" id="j2"></h2></div>
     </div>
-    <div class="flex2">
-        <h2 class="p1 oculto" id="p1">Jugador 1 Gano</h2>
-        <h2 class="p2 oculto" id="p2">Jugador 2 Gano</h2>
-        <h2 class="oculto" id="empate">Empate</h2>
-    </div>
     <div class="grid">
         <div class="espacio" id="uno"></div>
         <div class="espacio" id="dos"></div>
@@ -29,13 +24,11 @@
         <div class="espacio" id="ocho"></div>
         <div class="espacio" id="nueve"></div>
     </div>
-    <div class="cajaReset oculto" id="reset">
-        <button class="reset" type="reset"><a href="./tictactoe.html">Reset juego</a></button>
-        <button class="reset" id="btn2"><a href="./tictactoe.html">Reset puntacion</a></button>
-    </div>
     <div class="cajaReset">
+        <button class="reset" id="btn2"><a href="./tictactoe.html">Reset puntacion</a></button>
         <button class="reset"><a href="../index.html">Volver</a></button>
     </div>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../javascript/tictactoe.js"></script>
 </body>
 </html>
