--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="contenedor">
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="./images/tictactoe-menu.png" class="card-img-top" alt="Tic tac Toe" id="tictactoe">
         <div class="card-body">
           <h5 class="card-title">Tic tac Toe</h5>
           <p class="card-text">Es un juego para dos jugadores, X y O, que toman turnos marcando los espacios en una cuadrícula de 3×3. El jugador que logre colocar tres marcas respectivas en una fila horizontal, vertical o diagonal gana el juego</p>
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="./images/rubik-menu.png" class="card-img-top" alt="Cubo de rubik" id="rubik">
         <div class="card-body">
           <h5 class="card-title">Cubo rubik</h5>
           <p class="card-text">Posee seis colores uniformes. Un mecanismo de ejes permite a cada cara girar independientemente, mezclando así los colores. Para resolver el rompecabezas, cada cara debe volver a quedar en un solo color.</p>
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="./images/car-menu.png" class="card-img-top" alt="juego de carro" id="car">
         <div class="card-body">
           <h5 class="card-title">Carrera de Autos</h5>
           <p class="card-text">Usando las flechas para mover el auto a traves de la carretera. Si choca con otro auto, el juego terminara</p>
