--- a/pages/tictactoe.html
+++ b/pages/tictactoe.html
@@ -25,8 +25,8 @@
         <div class="espacio" id="nueve"></div>
     </div>
     <div class="cajaReset">
-        <button class="reset" id="btn2"><a href="./tictactoe.html">Reset puntacion</a></button>
-        <button class="reset"><a href="../index.html">Volver</a></button>
+        <button class="reset" id="btn2">Reset puntacion</button>
+        <button class="reset" id="volver">Volver</button>
     </div>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../javascript/tictactoe.js"></script>
